# ur-registry-rust

./: .gitignore  .gitmodules  .ndk_home.example  Cargo.toml  Makefile  README.md  UrRegistryFfi.podspec  cbindgen.toml
.cargo/: config.toml
include/: lib_ur_registry_ffi.h
include/URRegistryFFI/: lib_ur_registry_ffi.h
interfaces/ur_registry_flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
interfaces/ur_registry_flutter/android/: .gitignore  build.gradle  settings.gradle
interfaces/ur_registry_flutter/example/: README.md  pubspec.yaml
interfaces/ur_registry_flutter/ios/: ur_registry_flutter.podspec
interfaces/ur_registry_flutter/lib/: base.dart  crypto_hd_key.dart  native_object.dart  response.dart  response_interface.dart  response_native.dart  (+4 more)
libs/ur-registry/: Cargo.toml  README.md
libs/ur-registry-ffi/: Cargo.toml  README.md
libs/ur-registry-ffi/src/: crypto_account.rs  crypto_hd_key.rs  crypto_output.rs  crypto_psbt.rs  lib.rs  response.rs  types.rs  ur_decoder.rs  ur_encoder.rs  utils.rs
libs/ur-registry-ffi/src/cardano/: cardano_catalyst_signature.rs  cardano_catalyst_voting_registration.rs  cardano_sign_cip8_data_request.rs  cardano_sign_cip8_data_signature.rs  cardano_sign_data_request.rs  cardano_sign_data_signature.rs  cardano_sign_request.rs  cardano_sign_tx_hash_request.rs  cardano_signature.rs  mod.rs
libs/ur-registry-ffi/src/ethereum/: eth_sign_request.rs  eth_signarure.rs  mod.rs
libs/ur-registry-ffi/src/extend/: crypto_multi_accounts.rs
libs/ur-registry-ffi/src/solana/: crypto_multi_accounts.rs  mod.rs  solana_sign_request.rs  solana_signarure.rs
src/: crypto_coin_info.rs  crypto_ec_key.rs  crypto_hd_key.rs  crypto_key_path.rs  lib.rs  registry_types.rs  traits.rs  types.rs
src/solana/: crypto_multi_accounts.rs  mod.rs  sol_sign_request.rs  sol_signature.rs
(+62 files in other folders)
