[package]
name = "ur-registry-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
secp256k1 = "0.24.0"
ur = { git = "https://github.com/KeystoneHQ/ur-rs", tag = "0.3.2", default-features = false}
serde_cbor = "0.11.2"
ur-registry = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", tag="0.0.35" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.3.0"

[lib]
name = "ur_registry_ffi"
crate-type = ["cdylib", "staticlib"]